--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mime-types": "^2.0.10",
     "mkdirp": "^0.5.0",
     "morgan": "^1.5.2",
+    "nssocket": "^0.5.3",
     "rimraf": "^2.3.3",
     "songbird": "^1.0.1",
     "yargs": "^3.8.0"
