--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/vanessachem/node-dropbox",
   "dependencies": {
     "bluebird-nodeify": "^1.0.0",
+    "body-parser": "^1.12.3",
     "express": "^4.12.3",
     "mime-types": "^2.0.10",
     "mkdirp": "^0.5.0",
